[package]
name = "interactive-drawing"
version = "0.1.0"
authors = ["Joseph C. Osborn <joseph.osborn@pomona.edu>"]
edition = "2021"

[dependencies]
env_logger = "0.10"
image = "0.24.7"
log = "0.4"
pollster = "0.3.0"
wgpu = "0.17.1"
# Our graphics API
glyphon = {git="https://github.com/grovesNL/glyphon.git",rev="1de354c05da2414afdbd5ff0fe2b4104dcf7d414"}
winit = "0.28"
imageproc = "0.23"
rusttype = "0.9.2"
bytemuck = { version = "1.14.0", features = ["derive"] }
rand = "0.8.5"

[profile.dev.package.backtrace]
opt-level = 3
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.png]
opt-level = 3
[profile.dev.package.adler]
opt-level = 3
[profile.dev.package.miniz_oxide]
opt-level = 3